--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ body {
     <img src="yvn.png" alt="YVN Logo"> <!-- iyong png file -->
   </div>
 
-  <div class="main-text">Hack by PH D3STROY3R // SYNX4</div>
+  <div class="main-text">Hack by ~PH D3STROY3R // ~PH SYNX4 // ~PH KIY YAJ</div>
 
   <div id="greet">
     <h2>GREETINGS</h2>
